tests/errors/E008.zen
int main() {
    let a := 4;
    let a := 6;     // E008: Variable 'a' is redeclared
    return a;
}